css/ss.css
html {
 height: 100%;
}
body {
 height: 100%;
 background-color: #DEDCCF;
}
#gb-screen-height {
 height: 800px;
}
.errorMessage {
 padding-bottom: 5px;
 text-align: center;
 background-color: #BE4B49;
 color: #FFF;
}
.gb-backdrop {
 position: fixed;
 top: 0;
 right: 0;
 bottom: 0;
 left: 0;
 z-index: 1020;
 background-color: #000000;
}
.gb-z-index-2000 {
 z-index: 2000;
}
.gb-background {
 position: fixed;
 top: 80px;
 right: 0;
 bottom: 0;
 left: 0;
 z-index: -1020;
}
.gb-background div {
 height: 100%;
}
.gb-box-1 {
 padding: 10px;
 background-color: #FFF;
 border: #999 solid 1px;
 -moz-border-radius: 3px;
 -webkit-border-radius: 3px;
 border-radius: 3px;
}
.gb-box-3 {
 padding: 0px 0px 0px 0px;
}
.gb-stat-box {
 height: 150px;
 overflow: hidden;
}

.gb-stat-box .gb-title  {
 margin-top: 10px;

}
.gb-stat-box .gb-stat-value  {
 height: 100px;
 font-size: 4em;
 text-align: center;
}
.gb-stat-box .gb-scrollable  {
 height: 150px;
}
.gb-center-div {
 margin: 0 auto;
}
.gb-height-2 {
 height:100px!important;
}
.gb-height-7 {
 height:350px!important;
}
.gb-backdrop.in {
 opacity: 0.5;
 filter: alpha(opacity=50);
}
.gb-backdrop-escapee {
 position: relative;
 z-index: 1030!important;
}
::-webkit-scrollbar {
 width: 10px;
}
::-webkit-scrollbar-button {
 height: 0px;
}
::-webkit-scrollbar-track-piece {
 background: #DDD;
}
::-webkit-scrollbar-thumb {
 background: #BBB;
 border-radius: 2px;

}​
::-webkit-input-placeholder { /* WebKit browsers */
 color:    #888;
}
:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
 color:    #888;
 opacity:  1;
}
::-moz-placeholder { /* Mozilla Firefox 19+ */
 color:    #888;
 opacity:  1;
}
:-ms-input-placeholder { /* Internet Explorer 10+ */
 color:    #888;
}
h1,h2,h3,h4,h5,h6 {
 margin: 0 0 0 0;
 padding:0 0 0 0;
 font-weight: bold;
}
p {
 margin: 0 0 0 0;
 padding:0 0 0 0;
 word-wrap: break-word;
}
a {
 cursor:pointer;
 color: #006699; /* #1C5C76;*/
 word-wrap: break-word;
}
a:hover {
 color:#427FED;
}
ul,li{
 list-style:none;
}
.gb-tiny-text {
 font-size: 0.4em!important;
}
.gb-small-text {
 font-size: 0.6em!important;
}
.gb-scrollable {
 max-height: 400px;
 overflow-y: auto;
}
.gb-progress-bar {
 margin: 0;
 border-radius: 0;
 height: 10px;
}
img {
 height: 100%;
 width: 100%;
}
.gb-icon-1 {
 height: 20px;
 width: 25px;
}
.gb-icon-2 {
 margin-right: 3px;
 height: 20px;
 width: 23px;
}
.gb-img-sm {
 margin-right: 3px;
 height: 25px;
 width: 25px;
}
.gb-img-xs {
 margin-right: 3px;
 height: 18px;
 width: 18px;
}
.gb-img-md {
 height: 60px;
 width: 60px;
}
.form-control{
 border-radius: 0!important;
 box-shadow:0 0 0;
 border: #BBB solid 1px;
 border-bottom: #999 solid 2px!important;
}
.gb-bordered-btn {
 border: #BBB solid 1px;
}
.input-group .btn {
 margin-top: 0;
 border: #999 solid 1px;
 border-bottom: #777 solid 2px!important;
}
textarea.gb-form-show,
input.gb-form-show{
 cursor: auto!important;
 background-color: #FFF!important;
 color: #777;
}

.gb-hide {
 display: none;
}
.gb-disabled {
 pointer-events: none;
 opacity: 0.35;
 background: #FFF;
}
.gb-disabled-1 {
 pointer-events: none;
 opacity: 0.3;
 background: transparent;
}
.gb-ellipsis {
 margin: 0;
 white-space: nowrap;
 width: 100%;
 overflow: hidden;              /* "overflow" value must be different from "visible" */

 text-overflow: ellipsis;
}
.gb-ellipsis a {
 text-overflow: ellipsis;
}
.gb-puntos-icon {
 height:20px;
 width :20px;
}
.panel-borderless {
 border:none!important;
 box-shadow: none;
}
.panel-transparent {
 background-color: transparent;
}
.gb-level-selection-active,
.gb-level-selection:hover {
 background-color: #BBB;
 border: #888 solid 1px;
}

/*-------HEADINGS ---------*/
.gb-top-heading {
 padding: 0;
}
.gb-top-heading h2 {
 float: left;
 padding-left: 0px;
 font-weight: normal;
}
.gb-top-heading h1 {
 font-size: 4.0em;
 color: #FFF;
 padding-left: 0px;
 font-weight: normal;
}
.sub-heading-7 {
 height:20px;
 padding: 3px 5px 3px 10px;
 background-color: #706F65;
 color: #FFF;
}
.gb-margin-left-neg-thick {
 margin-left: -30px!important;
}
.gb-no-margin {
 margin: 0 0 0 0!important;
}
.gb-no-padding {
 padding: 0 0 0 0!important;
}
.gb-padding-thin {
 padding: 5px!important;
}
.gb-padding-thinner {
 padding: 2px!important;
}
.gb-padding-medium {
 padding: 8px!important;
}
.gb-padding-thickest {
 padding: 25px!important;
}
.gb-side-margin-thick {
 margin: 0 10px 0 10px!important;
}
.gb-padding-left-1 {
 padding-left: 5px!important;
}
.gb-padding-left-2 {
 padding-left: 10px!important;
}
.gb-padding-left-3 {
 padding-left: 15px!important;
}

.gb-left-nav-2 [gb-data-toggle=gb-expandable-tab] {
 height: 60px;
 padding:10px 8px 0 5px;
 display: block;
 width: 100%;
 border-top: #BBB solid 1px;
}
.gb-left-nav-2 [gb-data-toggle=gb-expandable-tab] .gb-icon-2 {
 margin: 10px 5px auto 5px;
}

.gb-left-nav-2 [gb-data-toggle=gb-expandable-tab] i{
 margin-top: 11px;
 color: #CCC;
}
.gb-left-nav-2 [gb-data-toggle=gb-expandable-tab] .gb-heading {
 color: #FAFAFA;
}
.gb-left-nav-2 [gb-data-toggle=gb-expandable-tab] .gb-title{
 padding:0;
 font-size: 1.2em;
 color: #FAFAFA;
 text-align: left;
 text-decoration: none;
 overflow: hidden;
}
.gb-left-nav-2 [gb-data-toggle=gb-expandable-tab] .gb-description{
 padding:0;
 font-size: 0.8em;
 color: #E0E0E0;
 text-align: left;
 text-decoration: none;
 overflow: hidden;
 margin-bottom: 0;
}
#gb-left-nav-3 {
 height: 100%;
 overflow-y: auto;
}
#gb-main-tab-pane {
 height: 100%;
}
#gb-middle-nav-3 {
 height: 100%;
 padding: 0;
 background-color: #FFF;
 border-left: #AAA solid 3px;
 border-right: #BBB solid 2px;
 overflow-y: auto;
}
#gb-right-nav-3 {
 background-color: #F2F2F2;
 overflow-y: auto;
 height: 100%;
}
#gb-right-nav-2 {
 background-color: #F2F2F2;
 overflow-y: auto;
 height: 100%;
}

#gb-left-nav-3 .gb-sidenav-app-heading[gb-data-toggle=gb-expandable-tab],
#gb-left-nav-3 .gb-sidenav-app-heading[gb-data-toggle=gb-expandable-tab].active{
 padding:5px 2px 5px 2px;
 display: block;
 width: 100%;
 background-color: #DEDCCF;
}
/* ... */

